--- a/composer.json
+++ b/composer.json
@@ -1,5 +1,5 @@
 {
-    "name": "ec-europa/oe-task-runner",
+    "name": "openeuropa/task-runner",
     "license": "EUPL-1.1",
     "type": "library",
     "minimum-stability": "dev",
@@ -9,7 +9,7 @@
         "nuvoleweb/robo-config": "~0.2"
     },
     "require-dev": {
-        "ec-europa/oe-code-review": "*",
+        "openeuropa/code-review": "^0.1",
         "phpunit/phpunit": "^5"
     },
     "autoload": {
