--- a/tests/fixtures/services/composer.yml
+++ b/tests/fixtures/services/composer.yml
@@ -1,13 +1,13 @@
 -
   composer: >
     {
-        "name": "ec-europa/oe-task-runner",
+        "name": "openeuropa/task-runner",
         "type": "library"
     }
   expected:
-    getName: "ec-europa/oe-task-runner"
-    getVendor: "ec-europa"
-    getProject: "oe-task-runner"
+    getName: "openeuropa/task-runner"
+    getVendor: "openeuropa"
+    getProject: "task-runner"
     getType: "library"
     hasName: true
     hasType: true
@@ -15,12 +15,12 @@
 -
   composer: >
     {
-        "name": "ec-europa/oe-task-runner"
+        "name": "openeuropa/task-runner"
     }
   expected:
-    getName: "ec-europa/oe-task-runner"
-    getVendor: "ec-europa"
-    getProject: "oe-task-runner"
+    getName: "openeuropa/task-runner"
+    getVendor: "openeuropa"
+    getProject: "task-runner"
     getType: ~
     hasName: true
     hasType: false
