--- a/tests/fixtures/simulation.yml
+++ b/tests/fixtures/simulation.yml
@@ -128,6 +128,14 @@
   contains:
     - "[Simulator] Running ./vendor/bin/drush -y --root=$(pwd)/build --site-name='Site name' --site-mail=info@example.org --locale=en --account-mail=admin@example.org --account-name=admin --account-pass=admin --sites-subdir=default --db-url='mysql://root:root@127.0.0.1:3306/drupal' site-install standard"
 
+- command: 'drupal:site-install --database-type=sqlite3'
+  configuration:
+    drupal:
+      post_install: []
+  composer: ''
+  contains:
+    - "[Simulator] Running ./vendor/bin/drush -y --root=$(pwd)/build --site-name='Site name' --site-mail=info@example.org --locale=en --account-mail=admin@example.org --account-name=admin --account-pass=admin --sites-subdir=default --db-url='sqlite3://root:root@127.0.0.1:3306/drupal' site-install standard"
+
 - command: 'custom:run-tasks'
   configuration:
     commands:
