Issue #47: Provide optional option --database-url, it overrides other database compound options.

--- a/tests/fixtures/simulation.yml
+++ b/tests/fixtures/simulation.yml
@@ -136,6 +136,22 @@
   contains:
     - "[Simulator] Running ./vendor/bin/drush -y --root=$(pwd)/build --site-name='Site name' --site-mail=info@example.org --locale=en --account-mail=admin@example.org --account-name=admin --account-pass=admin --sites-subdir=default --db-url='sqlite3://root:root@127.0.0.1:3306/drupal' site-install standard"
 
+- command: 'drupal:site-install --database-url=psql://root:password@host:port/database'
+  configuration:
+    drupal:
+      post_install: []
+  composer: ''
+  contains:
+    - "[Simulator] Running ./vendor/bin/drush -y --root=$(pwd)/build --site-name='Site name' --site-mail=info@example.org --locale=en --account-mail=admin@example.org --account-name=admin --account-pass=admin --sites-subdir=default --db-url='psql://root:password@host:port/database' site-install standard"
+
+- command: 'drupal:site-install --database-url=psql://root:password@host:port/database --database-type=sqlite3'
+  configuration:
+    drupal:
+      post_install: []
+  composer: ''
+  contains:
+    - "[Simulator] Running ./vendor/bin/drush -y --root=$(pwd)/build --site-name='Site name' --site-mail=info@example.org --locale=en --account-mail=admin@example.org --account-name=admin --account-pass=admin --sites-subdir=default --db-url='psql://root:password@host:port/database' site-install standard"
+
 - command: 'custom:run-tasks'
   configuration:
     commands:
