OPENEUROPA-545: Add repository service and inflector.

--- a/composer.json
+++ b/composer.json
@@ -6,6 +6,7 @@
     "prefer-stable": true,
     "require": {
         "consolidation/robo": "^1.2",
+        "gitonomy/gitlib": "~1",
         "nuvoleweb/robo-config": "~0.2"
     },
     "require-dev": {
