OPENEUROPA-545: Add initial release command class.

--- a/config/runner.yml
+++ b/config/runner.yml
@@ -65,6 +65,12 @@ github:
   token: ~
 
 # -----------------------------------------------------------------------------
+# Release commands configuration values.
+# -----------------------------------------------------------------------------
+release:
+  tasks: []
+
+# -----------------------------------------------------------------------------
 # List of dynamically-defined commands.
 # -----------------------------------------------------------------------------
 commands: []
