--- a/config/runner.yml
+++ b/config/runner.yml
@@ -68,7 +68,21 @@ github:
 # Release commands configuration values.
 # -----------------------------------------------------------------------------
 release:
+
+  # List of tasks to be ran before creating the release archive.
   tasks: []
+
+  # Time and date formats used when generating values below.
+  time_format: "H:i:s"
+  date_format: "Y-m-d"
+
+  # The following values are created at runtime and can be used when appending
+  # release notes to text files.
+  # They can be accessed via ${release.NAME}
+  version: ~
+  date: ~
+  time: ~
+  timestamp: ~
 
 # -----------------------------------------------------------------------------
 # List of dynamically-defined commands.
