OPENEUROPA-545: Removing default values for dynamic config parameters.

--- a/config/runner.yml
+++ b/config/runner.yml
@@ -79,10 +79,10 @@ release:
   # The following values are created at runtime and can be used when appending
   # release notes to text files.
   # They can be accessed via ${release.NAME}
-  version: ~
-  date: ~
-  time: ~
-  timestamp: ~
+# version: ~
+# date: ~
+# time: ~
+# timestamp: ~
 
 # -----------------------------------------------------------------------------
 # List of dynamically-defined commands.
