OPENEUROPA-545: Fix tests.

--- a/tests/fixtures/commands/release-dynamic-tokens.yml
+++ b/tests/fixtures/commands/release-dynamic-tokens.yml
@@ -3,7 +3,9 @@
     hash: "19di3458"
     revision: "refs/heads/master"
     tag: "1.0.0"
-    branches: []
+    branches:
+      - { name: "develop", local: false, revision: "refs/heads/develop" }
+      - { name: "master", local: true, revision: "refs/heads/master" }
   timestamp: 1514808000
   expected:
     release.version: "1.0.0"
@@ -20,7 +22,9 @@
     hash: "19di3458"
     revision: "refs/heads/master"
     tag: "1.0.0"
-    branches: []
+    branches:
+      - { name: "develop", local: false, revision: "refs/heads/develop" }
+      - { name: "master", local: true, revision: "refs/heads/master" }
   timestamp: 1514808000
   expected:
     release.version: "1.0.0"
@@ -38,11 +42,11 @@
     revision: "refs/heads/master"
     tag: ~
     branches:
-      - { name: "develop", local: false }
-      - { name: "master", local: true }
+      - { name: "develop", local: false, revision: "refs/heads/develop" }
+      - { name: "master", local: true, revision: "refs/heads/master" }
   timestamp: 1514808000
   expected:
-    release.version: "19di3458"
+    release.version: "master"
     release.date: "01/01/2018"
     release.time: "12:00"
     release.timestamp: 1514808000
