--- a/composer.json
+++ b/composer.json
@@ -7,7 +7,8 @@
     "require": {
         "consolidation/robo": "^1.2",
         "gitonomy/gitlib": "~1",
-        "nuvoleweb/robo-config": "~0.2"
+        "nuvoleweb/robo-config": "~0.2",
+        "jakeasmith/http_build_url": "^1.0"
     },
     "require-dev": {
         "openeuropa/code-review": "^0.2",
