--- a/tests/fixtures/simulation.yml
+++ b/tests/fixtures/simulation.yml
@@ -128,7 +128,7 @@
   contains:
     - "[Simulator] Running ./vendor/bin/drush -y --root=$(pwd)/build --site-name='Site name' --site-mail=info@example.org --locale=en --account-mail=admin@example.org --account-name=admin --account-pass=admin --sites-subdir=default --db-url='mysql://root:root@127.0.0.1:3306/drupal' site-install standard"
 
-- command: 'drupal:site-install --database-type=sqlite3'
+- command: 'drupal:site-install --database-scheme=sqlite3'
   configuration:
     drupal:
       post_install: []
@@ -136,7 +136,31 @@
   contains:
     - "[Simulator] Running ./vendor/bin/drush -y --root=$(pwd)/build --site-name='Site name' --site-mail=info@example.org --locale=en --account-mail=admin@example.org --account-name=admin --account-pass=admin --sites-subdir=default --db-url='sqlite://sites/default/files/.ht.sqlite' site-install standard"
 
-- command: 'drupal:site-install --database-type=pgsql'
+- command: 'drupal:site-install --database-scheme=pgsql'
+  configuration:
+    drupal:
+      post_install: []
+  composer: ''
+  contains:
+    - "[Simulator] Running ./vendor/bin/drush -y --root=$(pwd)/build --site-name='Site name' --site-mail=info@example.org --locale=en --account-mail=admin@example.org --account-name=admin --account-pass=admin --sites-subdir=default --db-url='pgsql://root:root@127.0.0.1:3306/drupal' site-install standard"
+
+- command: 'drupal:site-install --database-url=sqlite://a/b/c/d/e'
+  configuration:
+    drupal:
+      post_install: []
+  composer: ''
+  contains:
+    - "[Simulator] Running ./vendor/bin/drush -y --root=$(pwd)/build --site-name='Site name' --site-mail=info@example.org --locale=en --account-mail=admin@example.org --account-name=admin --account-pass=admin --sites-subdir=default --db-url='sqlite://a/b/c/d/e' site-install standard"
+
+- command: 'drupal:site-install --database-scheme=pgsql --database-url=sqlite://a/b/c/d/e'
+  configuration:
+    drupal:
+      post_install: []
+  composer: ''
+  contains:
+    - "[Simulator] Running ./vendor/bin/drush -y --root=$(pwd)/build --site-name='Site name' --site-mail=info@example.org --locale=en --account-mail=admin@example.org --account-name=admin --account-pass=admin --sites-subdir=default --db-url='sqlite://a/b/c/d/e' site-install standard"
+
+- command: 'drupal:site-install --database-scheme=pgsql --database-url='
   configuration:
     drupal:
       post_install: []
