--- a/.editorconfig
+++ b/.editorconfig
@@ -1,4 +1,4 @@
-# Drupal editor configuration normalization
+# Editor configuration normalization
 # @see http://editorconfig.org/
 
 # This is the top-most .editorconfig file; do not search in parent directories.
@@ -12,6 +12,3 @@ indent_size = 4
 charset = utf-8
 trim_trailing_whitespace = true
 insert_final_newline = true
-
-[composer.{json,lock}]
-indent_size = 4
