--- a/tests/fixtures/simulation.yml
+++ b/tests/fixtures/simulation.yml
@@ -128,15 +128,39 @@
   contains:
     - "[Simulator] Running ./vendor/bin/drush -y --root=$(pwd)/build --site-name='Site name' --site-mail=info@example.org --locale=en --account-mail=admin@example.org --account-name=admin --account-pass=admin --sites-subdir=default --db-url='mysql://root:root@127.0.0.1:3306/drupal' site-install standard"
 
-- command: 'drupal:site-install --database-type=sqlite3'
+- command: 'drupal:site-install'
+  configuration:
+    drupal:
+      post_install: []
+      database:
+        scheme: "sqlite"
+        host: "sites/default/files"
+        name: ".ht.drupal"
+  composer: ''
+  contains:
+    - "[Simulator] Running ./vendor/bin/drush -y --root=$(pwd)/build --site-name='Site name' --site-mail=info@example.org --locale=en --account-mail=admin@example.org --account-name=admin --account-pass=admin --sites-subdir=default --db-url='sqlite://sites/default/files/.ht.drupal' site-install standard"
+
+- command: 'drupal:site-install'
+  configuration:
+    drupal:
+      post_install: []
+      database:
+        type: "sqlite"
+        host: "sites/default/files"
+        name: ".ht.drupal"
+  composer: ''
+  contains:
+    - "[Simulator] Running ./vendor/bin/drush -y --root=$(pwd)/build --site-name='Site name' --site-mail=info@example.org --locale=en --account-mail=admin@example.org --account-name=admin --account-pass=admin --sites-subdir=default --db-url='sqlite://sites/default/files/.ht.drupal' site-install standard"
+
+- command: 'drupal:site-install --database-type=pgsql'
   configuration:
     drupal:
       post_install: []
   composer: ''
   contains:
-    - "[Simulator] Running ./vendor/bin/drush -y --root=$(pwd)/build --site-name='Site name' --site-mail=info@example.org --locale=en --account-mail=admin@example.org --account-name=admin --account-pass=admin --sites-subdir=default --db-url='sqlite://sites/default/files/.ht.sqlite' site-install standard"
+    - "[Simulator] Running ./vendor/bin/drush -y --root=$(pwd)/build --site-name='Site name' --site-mail=info@example.org --locale=en --account-mail=admin@example.org --account-name=admin --account-pass=admin --sites-subdir=default --db-url='pgsql://root:root@127.0.0.1:3306/drupal' site-install standard"
 
-- command: 'drupal:site-install --database-type=pgsql'
+- command: 'drupal:site-install --database-scheme=pgsql'
   configuration:
     drupal:
       post_install: []
