OPENEUROPA-696: Make sure the Task Runner provides current working directory as a replaceable token.

--- a/config/runner.yml
+++ b/config/runner.yml
@@ -5,8 +5,12 @@
 # -----------------------------------------------------------------------------
 # Global Task Runner settings
 # -----------------------------------------------------------------------------
+#
+# The "runner.working_dir" will contain the full path to current working directory.
+# @see OpenEuropa\TaskRunner\TaskRunner::createConfiguration()
 runner:
   bin_dir: "./vendor/bin"
+#  working_dir: ~
 
 # -----------------------------------------------------------------------------
 # Drupal-related settings.
