--- a/.drone.yml
+++ b/.drone.yml
@@ -27,12 +27,7 @@ pipeline:
     group: test
     image: ${IMAGE_PHP=fpfis/httpd-php-dev:5.6}
     commands:
-      # Reset permission since installation runs as root. @todo Fix this.
-      - mkdir -p tests
-      - chown -R 1000:1000 tests
-      - chmod -R 777 /tmp
-      - useradd -u 1000 -m -s /bin/bash web
-      - su web -c"./vendor/bin/phpunit"
+      - ./vendor/bin/phpunit
 
 matrix:
   IMAGE_PHP:
