--- a/composer.json
+++ b/composer.json
@@ -11,7 +11,7 @@
         "jakeasmith/http_build_url": "^1.0"
     },
     "require-dev": {
-        "openeuropa/code-review": "^0.3",
+        "openeuropa/code-review": "~0.3",
         "phpunit/phpunit": "^5||^6.0"
     },
     "autoload": {
