OPENEUROPA-1161: Make sure config dir can be set in YAML.

--- a/config/commands/drupal.yml
+++ b/config/commands/drupal.yml
@@ -23,6 +23,7 @@ command:
         database-user: ${drupal.database.user}
         database-password: ${drupal.database.password}
         sites-subdir: ${drupal.site.sites_subdir}
+        config-dir: ${drupal.site.config_dir}
     drush-setup:
       options:
         config-dir: ${drupal.root}/drush
