--- a/tests/fixtures/simulation.yml
+++ b/tests/fixtures/simulation.yml
@@ -70,6 +70,18 @@
   contains:
   - "[Simulator] Running ./vendor/bin/drush -y --root=$(pwd)/build --site-name='Test site' --site-mail=info@example.org --locale=en --account-mail=admin@example.org --account-name=admin --account-pass=admin --sites-subdir=default --db-url='mysql://root:root@127.0.0.1:3306/drupal' --config-dir=../config-dir site-install standard"
 
+- command: 'drupal:site-install --site-name="Test site"'
+  configuration:
+    drupal:
+      site:
+        config_dir: "../config/sync"
+      database:
+        name: "drupal"
+        user: "root"
+        password: "root"
+  composer: ''
+  contains:
+  - "[Simulator] Running ./vendor/bin/drush -y --root=$(pwd)/build --site-name='Test site' --site-mail=info@example.org --locale=en --account-mail=admin@example.org --account-name=admin --account-pass=admin --sites-subdir=default --db-url='mysql://root:root@127.0.0.1:3306/drupal' --config-dir=../config/sync site-install standard"
 
 - command: 'changelog:generate'
   configuration:
