--- a/.drone.yml
+++ b/.drone.yml
@@ -4,36 +4,49 @@ workspace:
 
 services:
   web:
-    image: ${IMAGE_PHP=fpfis/httpd-php-dev:5.6}
+    image: ${IMAGE_PHP=fpfis/httpd-php-dev:7.1}
     environment:
      - DOCUMENT_ROOT=/test/task-runner
 
 pipeline:
-  composer-install:
-    group: prepare
-    image: ${IMAGE_PHP=fpfis/httpd-php-dev:5.6}
-    volumes:
-      - /cache:/cache
-    commands:
-      - composer install
+  composer-install-lowest:
+      group: prepare
+      image: ${IMAGE_PHP=fpfis/httpd-php-dev:7.1}
+      volumes:
+        - /cache:/cache
+      commands:
+        - composer update --prefer-lowest
+      when:
+        matrix:
+          COMPOSER_BOUNDARY: lowest
+
+    composer-install-highest:
+      group: prepare
+      image: ${IMAGE_PHP=fpfis/httpd-php-dev:7.1}
+      volumes:
+        - /cache:/cache
+      commands:
+        - composer update
+      when:
+        matrix:
+          COMPOSER_BOUNDARY: highest
 
   grumphp:
     group: test
-    image: ${IMAGE_PHP=fpfis/httpd-php-dev:5.6}
+    image: ${IMAGE_PHP=fpfis/httpd-php-dev:7.1}
     commands:
       - ./vendor/bin/grumphp run
 
   phpunit:
     group: test
-    image: ${IMAGE_PHP=fpfis/httpd-php-dev:5.6}
+    image: ${IMAGE_PHP=fpfis/httpd-php-dev:7.1}
     commands:
       - ./vendor/bin/phpunit
 
 matrix:
   IMAGE_PHP:
-    - fpfis/httpd-php-dev:5.6
     - fpfis/httpd-php-dev:7.1
-
+    - fpfis/httpd-php-dev:7.2
   COMPOSER_BOUNDARY:
     - lowest
     - highest
