--- a/composer.json
+++ b/composer.json
@@ -6,13 +6,13 @@
     "prefer-stable": true,
     "require": {
         "consolidation/robo": "^1.2.2",
-        "gitonomy/gitlib": "~1",
-        "nuvoleweb/robo-config": "~0.2",
-        "jakeasmith/http_build_url": "^1.0"
+        "gitonomy/gitlib": "^1.0",
+        "nuvoleweb/robo-config": "^0.2.1",
+        "jakeasmith/http_build_url": "^1.0.1"
     },
     "require-dev": {
-        "openeuropa/code-review": "~0.3",
-        "phpunit/phpunit": "^5||^6.0"
+        "openeuropa/code-review": "~1.0",
+        "phpunit/phpunit": "~5.5|~6.0"
     },
     "autoload": {
         "psr-4": {
