--- a/composer.json
+++ b/composer.json
@@ -11,8 +11,8 @@
         "jakeasmith/http_build_url": "^1.0.1"
     },
     "require-dev": {
-        "openeuropa/code-review": "~1.0",
-        "phpunit/phpunit": "~5.5|~6.0"
+        "openeuropa/code-review": "~1.0.0-alpha3",
+        "phpunit/phpunit": "~5.5||~6.0"
     },
     "autoload": {
         "psr-4": {
