--- a/.drone.yml
+++ b/.drone.yml
@@ -26,7 +26,7 @@ pipeline:
     volumes:
     - /cache:/cache
     commands:
-    - composer update --ansi
+    - composer install --ansi
     when:
       matrix:
         COMPOSER_BOUNDARY: highest
