OPENEUROPA-1149: Change structure of task runner config file and add additional option for settings-setup command.

--- a/config/commands/drupal.yml
+++ b/config/commands/drupal.yml
@@ -30,3 +30,4 @@ command:
     settings-setup:
         options:
           sites-subdir: ${drupal.site.sites_subdir}
+          settings-override-file: ${drupal.site.settings_override_file}
