OPENEUROPA-1149: Improve force option processing.

--- a/config/runner.yml
+++ b/config/runner.yml
@@ -33,6 +33,7 @@ drupal:
     sites_subdir: "default"
     config_dir: ~
     settings_override_file: "settings.override.php"
+    force: true
 
   # Administrator account information.
   account:
