--- a/config/commands/drupal.yml
+++ b/config/commands/drupal.yml
@@ -24,7 +24,7 @@ command:
         database-password: ${drupal.database.password}
         sites-subdir: ${drupal.site.sites_subdir}
         config-dir: ${drupal.site.config_dir}
-        permissions-setup: true
+        permissions-setup: ${drupal.site.permissions_setup}
     drush-setup:
       options:
         config-dir: ${drupal.root}/drush
@@ -33,7 +33,8 @@ command:
         sites-subdir: ${drupal.site.sites_subdir}
         settings-override-file: ${drupal.site.settings_override_file}
         force: ${drupal.site.force}
-    setup-permissions:
+        permissions-setup: ${drupal.site.permissions_setup}
+    permissions-setup:
       options:
         sites-subdir: ${drupal.site.sites_subdir}
-        permissions-setup: true
+        permissions-setup: ${drupal.site.permissions_setup}
