OPENEUROPA-1140: Change from permissions-setup to skip-permissions-setup option.

--- a/config/commands/drupal.yml
+++ b/config/commands/drupal.yml
@@ -24,7 +24,7 @@ command:
         database-password: ${drupal.database.password}
         sites-subdir: ${drupal.site.sites_subdir}
         config-dir: ${drupal.site.config_dir}
-        permissions-setup: ${drupal.site.permissions_setup}
+        skip-permissions-setup: ${drupal.site.skip_permissions_setup}
     drush-setup:
       options:
         config-dir: ${drupal.root}/drush
@@ -33,8 +33,9 @@ command:
         sites-subdir: ${drupal.site.sites_subdir}
         settings-override-file: ${drupal.site.settings_override_file}
         force: ${drupal.site.force}
-        permissions-setup: ${drupal.site.permissions_setup}
+        skip-permissions-setup: ${drupal.site.skip_permissions_setup}
+        teste: ${drupal.site.teste}
     permissions-setup:
       options:
         sites-subdir: ${drupal.site.sites_subdir}
-        permissions-setup: ${drupal.site.permissions_setup}
+        skip-permissions-setup: ${drupal.site.skip_permissions_setup}
