--- a/config/commands/drupal.yml
+++ b/config/commands/drupal.yml
@@ -32,3 +32,9 @@ command:
         sites-subdir: ${drupal.site.sites_subdir}
         settings-override-file: ${drupal.site.settings_override_file}
         force: ${drupal.site.force}
+    setup-pre-install-permissions:
+      options:
+        sites-subdir: ${drupal.site.sites_subdir}
+    setup-post-install-permissions:
+      options:
+        sites-subdir: ${drupal.site.sites_subdir}
