OPENEUROPA-1272: Pass through the new --existing-config option to drush site-install.
This replaces the previous --config-dir option which is now deprecated.

--- a/config/commands/drupal.yml
+++ b/config/commands/drupal.yml
@@ -23,6 +23,8 @@ command:
         database-user: ${drupal.database.user}
         database-password: ${drupal.database.password}
         sites-subdir: ${drupal.site.sites_subdir}
+        # @deprecated
+        # Should only be used with Drupal 8.5 and lower. Use "existing-config".
         config-dir: ${drupal.site.config_dir}
     drush-setup:
       options:
