Issue #89: Update default config files and include the drupal core version.

--- a/config/commands/drupal.yml
+++ b/config/commands/drupal.yml
@@ -1,6 +1,7 @@
 command:
   drupal:
     options:
+      core: ${drupal.core}
       root: ${drupal.root}
       base-url: ${drupal.base_url}
     site-install:
