--- a/config/runner.yml
+++ b/config/runner.yml
@@ -19,6 +19,7 @@ runner:
 # Value of "drupal.root_absolute" is derived at runtime.
 # @see OpenEuropa\TaskRunner\Commands\DrupalCommands::setRuntimeConfig()
 drupal:
+  core: 8
   root: "build"
   root_absolute: ~
   base_url: "http://127.0.0.1:8888"
