--- a/.editorconfig
+++ b/.editorconfig
@@ -1,4 +1,4 @@
-# Editor configuration normalization
+# Drupal editor configuration normalization
 # @see http://editorconfig.org/
 
 # This is the top-most .editorconfig file; do not search in parent directories.
@@ -8,7 +8,10 @@ root = true
 [*]
 end_of_line = LF
 indent_style = space
-indent_size = 4
+indent_size = 2
 charset = utf-8
 trim_trailing_whitespace = true
 insert_final_newline = true
+
+[composer.{json,lock}]
+indent_size = 4
