OPENEUROPA-1371: Update versions and missing sections in composer file.

--- a/composer.json
+++ b/composer.json
@@ -31,5 +31,8 @@
         "enable-patching": true,
         "composer-exit-on-patch-failure": true
     },
-    "bin": ["bin/run"]
+    "bin": ["bin/run"],
+    "config": {
+        "sort-packages": true
+    }
 }
