OPENEUROPA-1569: Implementation improvements.

--- a/tests/fixtures/tasks/process-config-file/task.yml
+++ b/tests/fixtures/tasks/process-config-file/task.yml
@@ -23,5 +23,7 @@
 
 - source:
     comma-delimited: "${drupal.account}"
+    nested-comma-delimited: "${drupal.drush}"
   expected:
     comma-delimited: "admin,admin,admin@example.org"
+    nested-comma-delimited: "http://127.0.0.1:8888"
