--- a/.drone.yml
+++ b/.drone.yml
@@ -4,52 +4,47 @@ workspace:
 
 services:
   web:
-    image: ${IMAGE_PHP=fpfis/httpd-php-dev:5.6}
+    image: fpfis/httpd-php-dev:${PHP_VERSION=5.6}
     environment:
     - DOCUMENT_ROOT=/test/task-runner
 
 pipeline:
-  composer-install-lowest:
+  composer-install:
     group: prepare
-    image: ${IMAGE_PHP=fpfis/httpd-php-dev:5.6}
+    image: fpfis/httpd-php-dev:${PHP_VERSION=5.6}
     volumes:
     - /cache:/cache
     commands:
-    # @todo remove "composer install" step once the following issue is fixed.
-    # @link https://webgate.ec.europa.eu/CITnet/jira/browse/OPENEUROPA-1234
     - composer install --ansi --no-suggest --no-progress
-    - composer update --prefer-lowest --ansi --no-suggest --no-progress
+
+  composer-update-lowest:
+    group: post-prepare
+    image: fpfis/httpd-php-dev:${PHP_VERSION=5.6}
+    volumes:
+      - /cache:/cache
+    commands:
+      - composer update --prefer-lowest --ansi --no-suggest --no-progress
     when:
       matrix:
         COMPOSER_BOUNDARY: lowest
 
-  composer-install-highest:
-    group: prepare
-    image: ${IMAGE_PHP=fpfis/httpd-php-dev:5.6}
-    volumes:
-    - /cache:/cache
-    commands:
-    - composer install --ansi --no-suggest --no-progress
-    when:
-      matrix:
-        COMPOSER_BOUNDARY: highest
-
   grumphp:
     group: test
-    image: ${IMAGE_PHP=fpfis/httpd-php-dev:5.6}
+    image: fpfis/httpd-php-dev:${PHP_VERSION=5.6}
     commands:
     - ./vendor/bin/grumphp run
 
   phpunit:
     group: test
-    image: ${IMAGE_PHP=fpfis/httpd-php-dev:5.6}
+    image: fpfis/httpd-php-dev:${PHP_VERSION=5.6}
     commands:
     - ./vendor/bin/phpunit
 
 matrix:
-  IMAGE_PHP:
-  - fpfis/httpd-php-dev:5.6
-  - fpfis/httpd-php-dev:7.1
+  PHP_VERSION:
+  - 5.6
+  - 7.1
+  - 7.2
   COMPOSER_BOUNDARY:
   - lowest
   - highest
