--- a/composer.json
+++ b/composer.json
@@ -13,7 +13,7 @@
         "jakeasmith/http_build_url": "^1.0.1"
     },
     "require-dev": {
-        "openeuropa/code-review": "~1.0@beta",
+        "openeuropa/code-review": "~1.0.0-beta3",
         "phpunit/phpunit": "~5.5||~6.0"
     },
     "autoload": {
