OPENEUROPA-1739: Adapt to allow parameters to be set in runner file.

--- a/tests/fixtures/commands/drupal-services-setup.yml
+++ b/tests/fixtures/commands/drupal-services-setup.yml
@@ -1,25 +1,9 @@
 - config:
     drupal:
-      site:
-        sites_subdir: 'site1'
-      service_parameters: "default.services.yml"
-  data:
-    services:
-      content: >
-        parameters:
-          http.response.debug_cacheability_headers: false
+      service_parameters:
+        cors.config:
+          enabled: false
   expected:
     - contains: "parameters:"
-    - contains: "http.response.debug_cacheability_headers: false"
-
-- config:
-    drupal: []
-  data:
-    service-parameter: "default.services.yml"
-    services:
-      content: >
-        parameters:
-          http.response.debug_cacheability_headers: true
-  expected:
-    - contains: "parameters:"
-    - contains: "http.response.debug_cacheability_headers: true"
+    - contains: "cors.config:"
+    - contains: "enabled: false"
