--- a/tests/fixtures/simulation.yml
+++ b/tests/fixtures/simulation.yml
@@ -260,11 +260,15 @@
     - "WriteConfiguration('web/sites/default/drushrc.php'"
     - "File\\Write('./drush/drush.yml')"
 
-- command: 'drupal:services-setup --service-parameters=runner.yml'
-  configuration: []
+- command: 'drupal:services-setup'
+  configuration:
+    drupal:
+      service_parameters:
+        cors.config: false
+
   composer: ''
   contains:
-    - "Filesystem\\FilesystemStack()\n    ->copy('runner.yml', 'build/sites/default/services.yml'"
+    - "File\\Write('build/sites/default/services.yml'"
 
 - command: 'drupal:settings-setup'
   configuration: []
