--- a/tests/fixtures/commands/drupal-services-setup.yml
+++ b/tests/fixtures/commands/drupal-services-setup.yml
@@ -10,3 +10,29 @@
     - contains: "parameters:"
     - contains: "cors_config:"
     - contains: "enabled: ''"
+
+- config:
+    my_settings:
+      cors:
+        on: true
+    drupal:
+      service_parameters:
+        cors_config:
+          enabled: ${my_settings.cors.on}
+  expected:
+    - contains: "parameters:"
+    - contains: "cors_config:"
+    - contains: "enabled: '1'"
+
+- config:
+    my_settings:
+      cors:
+        on: ok
+    drupal:
+      service_parameters:
+        cors_config:
+          enabled: ${my_settings.cors.on}
+  expected:
+    - contains: "parameters:"
+    - contains: "cors_config:"
+    - contains: "enabled: ok"
